# betterscale-tools

./: .gitignore  Cargo.toml  LotteryRoot.compiled.json  README.md
examples/: log_cfg.yml  nodes.json  ton-global.config.json  zerostate-config.json
src/: crypto.rs  full_config.rs  main.rs  models.rs  zerostate.rs
src/config/: mod.rs
src/mine/: jeton_utils.rs  mine_jeton.rs  mod.rs
zerostate/: zerostate-config.json
