[package]
name = "betterscale-tools"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "betterscale"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
argh = "0.1"
base64 = "0.13"
env_logger = "0.9.0"
everscale-crypto = "0.2.0-pre.1"
generic-array = { version = "0.14", features = ["more_lengths"] }
hex = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
parking_lot = "0.12.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
sha2 = "0.9"
thiserror = "1.0"
tl-proto = "0.4.2"
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }

nekoton = { git = "https://github.com/broxus/nekoton.git", features = ["gql_transport", "jrpc_transport"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-transport = { git = "https://github.com/broxus/nekoton.git", features = ["gql_transport", "jrpc_transport"] }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }